--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -62,49 +62,47 @@
         <a class="card rocket" href="/docs/Guides/">
           <h5 class="title">Get started</h5>
           <p>
-            Learn Docker basics and the benefits of containerizing your
-            applications.
+            No information.
           </p>
         </a>
       </div>
       <div class="col-xs-12 col-sm-6 col-lg-4 card-holder">
-        <a class="card download-docker" href="/get-docker/">
+        <a class="card download-docker" href="/docs/Guides/">
           <h5 class="title">Download and install</h5>
           <p>
-            Download and install Docker on your machine in a few easy steps.
+            No information.
           </p>
         </a>
       </div>
       <div class="col-xs-12 col-sm-6 col-lg-4 card-holder">
-        <a class="card guides" href="/docs/Guides/overview/">
+        <a class="card guides" href="/docs/Guides/">
           <h5 class="title">Guides</h5>
           <p>
-            Learn how to set up your Docker environment and start containerizing
-            your applications.
+            No information.
           </p>
         </a>
       </div>
       <div class="col-xs-12 col-sm-6 col-lg-4 card-holder">
-        <a class="card language-guides" href="/language/">
+        <a class="card language-guides" href="/docs/Guides/">
           <h5 class="title">Language-specific guides</h5>
           <p>
-            Learn how to containerize language-specific applications using Docker.
+            No information.
           </p>
         </a>
       </div>
       <div class="col-xs-12 col-sm-6 col-lg-4 card-holder">
-        <a class="card manuals" href="/desktop/">
+        <a class="card manuals" href="/docs/Guides/">
           <h5 class="title">Manuals</h5>
           <p>
-            Browse through the manuals and learn how to use Docker products.
+            No information.
           </p>
         </a>
       </div>
       <div class="col-xs-12 col-sm-6 col-lg-4 card-holder">
-        <a class="card reference" href="/reference/">
+        <a class="card reference" href="/docs/Guides/">
           <h5 class="title">Reference</h5>
           <p>
-            Browse through the CLI and API reference documentation.
+            No information.
           </p>
         </a>
       </div>
