--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,60 +16,60 @@
   </div>
   {% endcomment %}
     <div class="container">
-        <div class="top_footer">
-            <div class="row">
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <ul class="footer_links">
-                        <li><b><a href="https://www.docker.com/products" target="_blank" rel="noopener">Product offerings</a></b></li>
-<!--                        <li><a href="https://www.docker.com/products/personal" target="_blank" rel="noopener">Docker Personal</a></li>-->
-<!--                        <li><a href="https://www.docker.com/products/pro" target="_blank" rel="noopener">Docker Pro</a></li>-->
-                    </ul>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <ul class="footer_links">
-                        <li><b><a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Developers</a></b></li>
-<!--                        <li><a href="https://www.docker.com/use-cases" target="_blank" rel="noopener">Use Cases</a></li>-->
-<!--                        <li><a href="https://docs.docker.com/get-started/" target="_blank" rel="noopener">Get Started</a></li>-->
-<!--                        <li><a href="https://www.docker.com/blog/" target="_blank" rel="noopener">Blog</a></li>-->
-<!--                        <li><a href="https://www.docker.com/docker-community" target="_blank" rel="noopener">Community</a></li>-->
-<!--                        <li><a href="https://www.docker.com/open-source" target="_blank" rel="noopener">Open Source</a></li>-->
-<!--                        <li><a href="https://www.docker.com/community/get-involved/developer-preview" target="_blank" rel="noopener">Preview Program</a></li>-->
-                    </ul>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <ul class="footer_links">
-                        <li><b><a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Pricing</a></b></li>
-<!--                        <li><a href="https://www.docker.com/pricing/faq" target="_blank" rel="noopener">FAQ</a></li>-->
-<!--                        <li><a href="https://www.docker.com/partners/programs" target="_blank" rel="noopener">Docker Verified Publisher</a></li>-->
-<!--                        <li><a href="https://www.docker.com/partners" target="_blank" rel="noopener">Partners</a></li>-->
-                    </ul>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3">
-                    <ul class="footer_links">
-                        <li><b><a href="https://www.svetek.com/" target="_blank" rel="noopener">About Us</a></b></li>
-<!--                        <li><a href="https://www.docker.com/what-container" target="_blank" rel="noopener">What is a Container?</a></li>-->
-<!--                        <li><a href="https://www.docker.com/why-docker" target="_blank" rel="noopener">Why Docker?</a></li>-->
-<!--                        <li><a href="https://www.docker.com/events" target="_blank" rel="noopener">Virtual Events</a></li>-->
-<!--                        <li><a href="https://www.docker.com/swag" target="_blank" rel="noopener">Swag Store-->
-<!--                        </a></li>-->
-<!--                        <li><a href="https://www.docker.com/company/newsroom" target="_blank" rel="noopener">Newsroom</a></li>-->
-<!--                        <li><a href="https://www.docker.com/careers" target="_blank" rel="noopener">Careers</a></li>-->
-<!--                        <li><a href="https://www.docker.com/company/contact" target="_blank" rel="noopener">Contact Us</a></li>-->
-<!--                        <li><a href="https://www.docker.com/customers" target="_blank" rel="noopener">Customers</a></li>-->
-<!--                        <li><a href="https://www.docker.com/newsletter-subscription" target="_blank" rel="noopener">Newsletter</a></li>-->
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-nav">
-                <nav class="footer_sub_nav">
-                    <ul class="menu">
-                        <li><a href="https://www.docker.com/legal/docker-terms-service" target="_blank" rel="noopener">Terms of Service</a></li>
-<!--                        <li><a href="https://status.docker.com/" target="_blank" rel="noopener">Status</a></li>-->
-<!--                        <li><a href="https://www.docker.com/legal" target="_blank" rel="noopener">Legal</a></li>-->
-                    </ul>
-                </nav>
-            </div>
-        </div>
+<!--        <div class="top_footer">-->
+<!--            <div class="row">-->
+<!--                <div class="col-xs-12 col-sm-3 col-md-3">-->
+<!--                    <ul class="footer_links">-->
+<!--                        <li><b><a href="https://www.docker.com/products" target="_blank" rel="noopener">Product offerings</a></b></li>-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/products/personal" target="_blank" rel="noopener">Docker Personal</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/products/pro" target="_blank" rel="noopener">Docker Pro</a></li>&ndash;&gt;-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--                <div class="col-xs-12 col-sm-3 col-md-3">-->
+<!--                    <ul class="footer_links">-->
+<!--                        <li><b><a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Developers</a></b></li>-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/use-cases" target="_blank" rel="noopener">Use Cases</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://docs.docker.com/get-started/" target="_blank" rel="noopener">Get Started</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/blog/" target="_blank" rel="noopener">Blog</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/docker-community" target="_blank" rel="noopener">Community</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/open-source" target="_blank" rel="noopener">Open Source</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/community/get-involved/developer-preview" target="_blank" rel="noopener">Preview Program</a></li>&ndash;&gt;-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--                <div class="col-xs-12 col-sm-3 col-md-3">-->
+<!--                    <ul class="footer_links">-->
+<!--                        <li><b><a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Pricing</a></b></li>-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/pricing/faq" target="_blank" rel="noopener">FAQ</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/partners/programs" target="_blank" rel="noopener">Docker Verified Publisher</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/partners" target="_blank" rel="noopener">Partners</a></li>&ndash;&gt;-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--                <div class="col-xs-12 col-sm-3 col-md-3">-->
+<!--                    <ul class="footer_links">-->
+<!--                        <li><b><a href="https://www.svetek.com/" target="_blank" rel="noopener">About Us</a></b></li>-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/what-container" target="_blank" rel="noopener">What is a Container?</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/why-docker" target="_blank" rel="noopener">Why Docker?</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/events" target="_blank" rel="noopener">Virtual Events</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/swag" target="_blank" rel="noopener">Swag Store&ndash;&gt;-->
+<!--&lt;!&ndash;                        </a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/company/newsroom" target="_blank" rel="noopener">Newsroom</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/careers" target="_blank" rel="noopener">Careers</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/company/contact" target="_blank" rel="noopener">Contact Us</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/customers" target="_blank" rel="noopener">Customers</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/newsletter-subscription" target="_blank" rel="noopener">Newsletter</a></li>&ndash;&gt;-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="footer-nav">-->
+<!--                <nav class="footer_sub_nav">-->
+<!--                    <ul class="menu">-->
+<!--                        <li><a href="https://www.docker.com/legal/docker-terms-service" target="_blank" rel="noopener">Terms of Service</a></li>-->
+<!--&lt;!&ndash;                        <li><a href="https://status.docker.com/" target="_blank" rel="noopener">Status</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://www.docker.com/legal" target="_blank" rel="noopener">Legal</a></li>&ndash;&gt;-->
+<!--                    </ul>-->
+<!--                </nav>-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="bottom_footer">
             <div class="footer-copyright col-xs-12 col-md-8">
                 <p class="copyright">
