--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,7 +2,7 @@
 {%- if page.edit_url -%}
     {%- assign edit_url = page.edit_url -%}
 {%- else -%}
-    {%- assign edit_url = "https://github.com/svetek/help.svetek.com/edit/main/" | append: page.path -%}
+    {%- assign edit_url = "https://github.com/svetek/svetekhelp.github.io/edit/main/" | append: page.path -%}
 {%- endif -%} -->
 <!DOCTYPE html>
 <html lang="en">
@@ -63,7 +63,7 @@
                                         {%- if edit_url != "" -%}
                                         <li><a href="{{ edit_url }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit this page</a></li>
                                         {%- endif -%}
-                                        <li><a href="https://github.com/svetek/help.svetek.com/issues/new?body=File: [{{ page.path }}](https://help.svetek.com{{ page.url }})" class="nomunge"><i class="fa fa-check" aria-hidden="true"></i> Request docs changes</a></li>
+                                        <li><a href="https://github.com/svetek/svetekhelp.github.io/issues/new?body=File: [{{ page.path }}](https://help.svetek.com{{ page.url }})" class="nomunge"><i class="fa fa-check" aria-hidden="true"></i> Request docs changes</a></li>
                                         <li>{%- include theme-switch.html -%}</li>
                                     </ul>
                                 </div>
