--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,8 +80,8 @@
 <!--                    <li class="fa fa-twitter"><a href="https://twitter.com/docker">Twitter</a></li>-->
 <!--                    <li class="fa fa-youtube"><a href="https://www.youtube.com/user/dockerrun">Youtube</a></li>-->
                     <li class="fa fa-github"><a href="https://github.com/svetek">GitHub</a></li>
-<!--                    <li class="fa fa-linkedin"><a href="https://www.linkedin.com/company/docker">Linkedin</a></li>-->
-<!--                    <li class="fa fa-facebook"><a href="https://www.facebook.com/docker.run">Facebook</a></li>-->
+                    <li class="fa fa-linkedin"><a href="https://www.linkedin.com/company/svetek/">Linkedin</a></li>
+                    <li class="fa fa-facebook"><a href="https://www.facebook.com/svetekITsolutions">Facebook</a></li>
 <!--                    <li class="fa fa-slideshare"><a href="https://www.slideshare.net/docker">Slideshare</a></li>-->
 <!--                    <li class="fa fa-reddit"><a href="https://www.reddit.com/r/docker">Reddit</a></li>-->
                 </ul>
