--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <div class="logo-mobile">
     <a href="/">
-        <img src="/images/docker-icon.svg" alt="Docker Docs" title="Docker Docs" width="30" height="30" />
+        <img src="/images/svetek-small-logo.svg" alt="Svetek Docs" title="Svetek Docs" width="30" height="30" />
     </a>
 </div>
 <div class="search-form" id="search-div">
