--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
   <meta name="robots" content="noindex"/>
   {%- endif %}
   {%- if jekyll.environment == 'production' and site.google_analytics != '' -%}{%- include analytics/google_analytics.html GOOGLE_ID=site.google_analytics -%}{%- endif -%}
-  <title>{{ page.title | default: page_title }} | Docker Documentation</title>
+  <title>{{ page.title | default: page_title }} | Svetek Documentation</title>
   <meta name="description" content="{{ page.description | default: page_description | escape}}" />
   <meta name="keywords" content="{{ page.keywords | default: 'docker, docker open source, docker platform, distributed applications, microservices, containers, docker containers, docker software, docker virtualization' }}">
   <link rel="canonical" href="{{ domain_name }}{{ page.url }}" />
@@ -93,19 +93,19 @@
   <meta name="twitter:title" itemprop="title name" content="{{ page.title | default: page_title }}"/>
   <meta name="twitter:description" property="og:description" itemprop="description" content="{{ page_description | escape_once }}" />
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:domain" content="docs.docker.com"/>
+  <meta name="twitter:domain" content="help2.svetek.com"/>
   <meta name="twitter:site" content="@docker_docs"/>
   <meta name="twitter:url" content="https://twitter.com/docker_docs"/>
-  <meta name="twitter:image:src" content="https://docs.docker.com/images/svetek-favicon.png"/>
-  <meta name="twitter:image:alt" content="Docker Documentation"/>
+  <meta name="twitter:image:src" content="https://help2.svetek.com/images/svetek-favicon.png"/>
+  <meta name="twitter:image:alt" content="Svetek Documentation"/>
   <meta property="og:title" content="{{ page.title | default: page_title }}" />
   <meta property="og:description" content="{{ page.description | default: page_description | escape_once }}" />
   <meta property="og:type" content="website"/>
   <meta property="og:updated_time" itemprop="dateUpdated" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/>
-  <meta property="og:image" itemprop="image primaryImageOfPage" content="https://docs.docker.com/images/svetek-favicon.png"/>
+  <meta property="og:image" itemprop="image primaryImageOfPage" content="https://help2.svetek.com/images/svetek-favicon.png"/>
   <meta property="og:locale" content="en_US" />
-  <meta property="og:url" content="https://docs.docker.com{{ page.url }}" />
-  <meta property="og:site_name" content="Docker Documentation" />
+  <meta property="og:url" content="https://help2.svetek.com{{ page.url }}" />
+  <meta property="og:site_name" content="Svetek Documentation" />
   <meta property="article:published_time" itemprop="datePublished" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/>
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","headline":{{ page.title | default: page_title | jsonify }},"description":{{ page.description | default: page_description | jsonify }},"url":"https://docs.docker.com{{ page.url }}"}</script>
   <!-- END SEO STUFF -->
