Replace help2 to help

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
 <!--                    <ul class="footer_links">-->
 <!--                        <li><b><a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Developers</a></b></li>-->
 <!--&lt;!&ndash;                        <li><a href="https://www.docker.com/use-cases" target="_blank" rel="noopener">Use Cases</a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                        <li><a href="https://help2.svetek.com/get-started/" target="_blank" rel="noopener">Get Started</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <li><a href="https://help.svetek.com/get-started/" target="_blank" rel="noopener">Get Started</a></li>&ndash;&gt;-->
 <!--&lt;!&ndash;                        <li><a href="https://www.docker.com/blog/" target="_blank" rel="noopener">Blog</a></li>&ndash;&gt;-->
 <!--&lt;!&ndash;                        <li><a href="https://www.docker.com/docker-community" target="_blank" rel="noopener">Community</a></li>&ndash;&gt;-->
 <!--&lt;!&ndash;                        <li><a href="https://www.docker.com/open-source" target="_blank" rel="noopener">Open Source</a></li>&ndash;&gt;-->
