--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
         {%- assign page_description = content | strip_html | strip | truncatewords: 30 -%}
     {%- endif -%}
 {%- endif -%}
-{%- assign domain_name = 'https://help2.svetek.com' -%}
+{%- assign domain_name = 'https://help.svetek.com' -%}
 {%- if jekyll.environment == 'development' -%}
 {%- assign domain_name = 'https://localhost:4000' -%}
 {%- endif -%}
@@ -93,20 +93,20 @@
   <meta name="twitter:title" itemprop="title name" content="{{ page.title | default: page_title }}"/>
   <meta name="twitter:description" property="og:description" itemprop="description" content="{{ page_description | escape_once }}" />
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:domain" content="help2.svetek.com"/>
+  <meta name="twitter:domain" content="help.svetek.com"/>
   <meta name="twitter:site" content="@docker_docs"/>
   <meta name="twitter:url" content="https://twitter.com/docker_docs"/>
-  <meta name="twitter:image:src" content="https://help2.svetek.com/images/svetek-favicon.png"/>
+  <meta name="twitter:image:src" content="https://help.svetek.com/images/svetek-favicon.png"/>
   <meta name="twitter:image:alt" content="Svetek Documentation"/>
   <meta property="og:title" content="{{ page.title | default: page_title }}" />
   <meta property="og:description" content="{{ page.description | default: page_description | escape_once }}" />
   <meta property="og:type" content="website"/>
   <meta property="og:updated_time" itemprop="dateUpdated" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/>
-  <meta property="og:image" itemprop="image primaryImageOfPage" content="https://help2.svetek.com/images/svetek-favicon.png"/>
+  <meta property="og:image" itemprop="image primaryImageOfPage" content="https://help.svetek.com/images/svetek-favicon.png"/>
   <meta property="og:locale" content="en_US" />
-  <meta property="og:url" content="https://help2.svetek.com{{ page.url }}" />
+  <meta property="og:url" content="https://help.svetek.com{{ page.url }}" />
   <meta property="og:site_name" content="Svetek Documentation" />
   <meta property="article:published_time" itemprop="datePublished" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","headline":{{ page.title | default: page_title | jsonify }},"description":{{ page.description | default: page_description | jsonify }},"url":"https://help2.svetek.com{{ page.url }}"}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebPage","headline":{{ page.title | default: page_title | jsonify }},"description":{{ page.description | default: page_description | jsonify }},"url":"https://help.svetek.com{{ page.url }}"}</script>
   <!-- END SEO STUFF -->
 </head>
