--- a/_includes/landing-page/dev-environments.html
+++ b/_includes/landing-page/dev-environments.html
@@ -10,7 +10,7 @@
         </h5>
       </div>
       <div class="col-xs-12 col-md-6 col-lg-4 text-center">
-        <a class="btn" href="https://help2.svetek.com/desktop/dev-environments/" target="_blank" rel="noopener">
+        <a class="btn" href="https://help.svetek.com/desktop/dev-environments/" target="_blank" rel="noopener">
           Check out the details
         </a>
       </div>
