--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  {%- assign redirect_to = page.redirect.to | remove_first: 'https://help2.svetek.com' | remove_first: 'http://help2.svetek.com' %}
+  {%- assign redirect_to = page.redirect.to | remove_first: 'https://help.svetek.com' | remove_first: 'http://help.svetek.com' %}
   {%- if redirect_to contains "://" %}
   <link rel="canonical" href="{{ redirect_to }}">
   {%- else %}
-  <link rel="canonical" href="https://help2.svetek.com{{ redirect_to }}">
+  <link rel="canonical" href="https://help.svetek.com{{ redirect_to }}">
   {%- endif %}
   <meta http-equiv="refresh" content="0; url={{ redirect_to }}">
   <meta name="robots" content="noindex">
